src/test/deca/syntax/invalid/obtained_res/commentaireIncompletsynt.res
./src/test/deca/syntax/invalid/created/testCommetaires/commentaireIncomplet.deca:8:0: no viable alternative at input '/'
